--- a/src/main/resources/templates/frontend/dashboard/index.html
+++ b/src/main/resources/templates/frontend/dashboard/index.html
@@ -11,7 +11,11 @@
     <div class="page-header">
         <h1>Tableau de bord</h1>
     </div>
-
+    <ul>
+        <li><a href="#" th:href="@{/ranking}">Classement des équipes</a></li>
+        <li><a href="#" th:href="@{/matchs}">Matchs / rencontres</a></li>
+        <li><a href="#" th:href="@{/teams}">Equipes</a></li>
+    </ul>
 </div>
 
 </body>
