--- a/src/main/resources/templates/backend/matchs/edit.html
+++ b/src/main/resources/templates/backend/matchs/edit.html
@@ -16,48 +16,117 @@
         </ol>
         <h1>Modifier un match</h1>
     </div>
-    <form class="form-signin" role="form" action="#" th:action="@{/admin/matchs/{matchId}(matchId=${match.id})}" th:object="${match}" method="post">
-        <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
-            <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
-        </div>
-        <div class="form-group">
-            <label for="idTeamDom">Equipe domicile</label>
-            <select id="idTeamDom" th:field="*{idTeamDom}" class="form-control">
-                <option th:each="team : ${teams}"
-                        th:value="${team.id}"
-                        th:text="${team.name}">Nom équipe</option>
-            </select>
-            <p th:if="${#fields.hasErrors('idTeamDom')}" th:errors="*{idTeamDom}"></p>
-        </div>
-        <div class="form-group">
-            <label for="idTeamExt">Equipe extérieure</label>
-            <select id="idTeamExt" th:field="*{idTeamExt}" class="form-control">
-                <option th:each="team : ${teams}"
-                        th:value="${team.id}"
-                        th:text="${team.name}">Nom équipe</option>
-            </select>
-            <p th:if="${#fields.hasErrors('idTeamExt')}" th:errors="*{idTeamExt}"></p>
-        </div>
-        <div class="form-group">
-            <label for="scoreDom">Score équipe domicile</label>
-            <input type="text" class="form-control" id="scoreDom" placeholder="" th:field="*{scoreDom}" />
-            <p th:if="${#fields.hasErrors('scoreDom')}" th:errors="*{scoreDom}"></p>
-        </div>
-        <div class="form-group">
-            <label for="scoreDom">Score équipe extérieure</label>
-            <input type="text" class="form-control" id="scoreExt" placeholder="" th:field="*{scoreExt}" />
-            <p th:if="${#fields.hasErrors('scoreExt')}" th:errors="*{scoreExt}"></p>
-        </div>
-        <div class="form-group">
-            <label for="playedAt">Date de la rencontre</label>
-            <input type="text" class="form-control" id="playedAt" placeholder="Au format jj/mm/aaaa" th:field="*{playedAt}" required="required" />
-            <p th:if="${#fields.hasErrors('playedAt')}" th:errors="*{playedAt}"></p>
-        </div>
-        <input type="hidden" th:field="*{id}" />
-        <input type="hidden" name="_method" value="PUT" />
-        <button type="submit" class="btn btn-primary btn-lg">Modifier</button>
-    </form>
+    <div th:if="!${#lists.isEmpty(teams)}">
+        <form class="form-signin" role="form" action="#" th:action="@{/admin/matchs/{matchId}(matchId=${match.id})}" th:object="${match}" method="post">
+
+            <div th:if="${#fields.hasGlobalErrors()}" class="alert alert-danger">
+                <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
+            </div>
+
+            <ul class="nav nav-tabs" role="tablist" id="tabs">
+                <li role="presentation" class="active"><a href="#infos" aria-controls="infos" role="tab" data-toggle="tab">Généralités</a></li>
+                <li role="presentation"><a href="#results" aria-controls="results" role="tab" data-toggle="tab">Résultats</a></li>
+                <li role="presentation"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Commentaires</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade in active" id="infos">
+                    <br />
+                    <div class="form-group">
+                        <label for="teamHome">Equipe domicile</label>
+                        <select id="teamHome" th:field="*{teamHome}" class="form-control">
+                            <option th:each="team : ${teams}"
+                                    th:value="${team.id}"
+                                    th:text="${team.name}">Nom équipe</option>
+                        </select>
+                        <p th:if="${#fields.hasErrors('teamHome')}" th:errors="*{teamHome}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="teamAway">Equipe extérieure</label>
+                        <select id="teamAway" th:field="*{teamAway}" class="form-control">
+                            <option th:each="team : ${teams}"
+                                    th:value="${team.id}"
+                                    th:text="${team.name}">Nom équipe</option>
+                        </select>
+                        <p th:if="${#fields.hasErrors('teamAway')}" th:errors="*{teamAway}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="playedAt">Date de la rencontre</label>
+                        <input type="text" class="form-control" id="playedAt" placeholder="Au format jj/mm/aaaa" th:field="*{playedAt}" required="required" />
+                        <p th:if="${#fields.hasErrors('playedAt')}" th:errors="*{playedAt}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="season">Saison</label>
+                        <select id="season" th:field="*{season}" class="form-control">
+                            <option th:each="season : ${seasons}"
+                                    th:value="${season.id}"
+                                    th:text="${season.name}">Nom saison</option>
+                        </select>
+                        <p th:if="${#fields.hasErrors('season')}" th:errors="*{season}"></p>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="results">
+                    <br />
+                    <p>A la fin de la rencontre, renseignez les résultats ci-dessous :</p>
+                    <br />
+                    <div class="form-group">
+                        <label for="scoreHome">Score équipe domicile</label>
+                        <input type="text" class="form-control" id="scoreHome" placeholder="" th:field="*{scoreHome}" />
+                        <p th:if="${#fields.hasErrors('scoreHome')}" th:errors="*{scoreHome}"></p>
+                    </div>
+                    <div class="form-group">
+                        <label for="scoreHome">Score équipe extérieure</label>
+                        <input type="text" class="form-control" id="scoreAway" placeholder="" th:field="*{scoreAway}" />
+                        <p th:if="${#fields.hasErrors('scoreAway')}" th:errors="*{scoreAway}"></p>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="comments">
+                    <br />
+                    <div th:if="!${#lists.isEmpty(match.getComments())}">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Auteur</th>
+                                    <th>Commentaire</th>
+                                    <th>Posté le</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="comment : ${match.getComments()}">
+                                    <th th:text="${comment.id}" scope="row">1</th>
+                                    <td th:text="${comment.getUser().firstName}"></td>
+                                    <td th:text="${comment.comment}"></td>
+                                    <td th:text="${comment.postedAt}"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div th:if="${#lists.isEmpty(match.getComments())}" class="alert alert-warning" role="alert">
+                        <p>Aucun commentaire posté pour ce match.</p>
+                    </div>
+                </div>
+            </div>
+            <input type="hidden" th:field="*{id}" />
+            <input type="hidden" name="oldScoreHome" th:value="${match.scoreHome}" />
+            <input type="hidden" name="oldScoreAway" th:value="${match.scoreAway}" />
+            <input type="hidden" name="_method" value="PUT" />
+            <button type="submit" class="btn btn-primary btn-lg">Modifier</button>
+        </form>
+    </div>
+    <div th:if="${#lists.isEmpty(teams)}" class="alert alert-warning" role="alert">
+        Pour pouvoir ajouter un match, vous devez d'abord <a href="#" th:href="@{/admin/teams/create}">créer des équipes.</a>
+    </div>
 </div>
+
+<script layout:fragment="scripts">
+    $(document).ready(function() {
+        $('#tabs a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        })
+    });
+</script>
 
 </body>
 
